test_src/compiler_errors/types/arithmetic/AddBoolError2.b
class AddBoolError2 {
    void test() {
        println(2 + false);
    }
}
